CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE(${PROJECT_SOURCE_DIR}/CMakeCommon)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(. COROUTINE_SRC)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_LIBRARY(coroutine ${COROUTINE_SRC})
SET_TARGET_PROPERTIES(coroutine PROPERTIES LINKER_LANGUAGE CXX)
