CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/ananas_rpc.pb.h ${CMAKE_CURRENT_SOURCE_DIR}/ananas_rpc.pb.cc
    COMMAND protoc
    ARGS --cpp_out ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/ananas_rpc.proto -I${CMAKE_CURRENT_SOURCE_DIR} 
    DEPENDS ananas_rpc.proto)
#EXECUTE_PROCESS(COMMAND protoc --cpp_out=./ ananas_rpc.proto -I${CMAKE_CURRENT_SOURCE_DIR}
#                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/protobuf_rpc
#                DEPENDS ananas_rpc.proto)

INCLUDE(${PROJECT_SOURCE_DIR}/CMakeCommon)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(. ANANAS_SRC)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(ANANAS_RPC ananas_rpc)

ADD_LIBRARY(${ANANAS_RPC} ${ANANAS_SRC};ananas_rpc.pb.cc)
TARGET_LINK_LIBRARIES(${ANANAS_RPC}; ananas)
ADD_DEPENDENCIES(${ANANAS_RPC} ananas)
SET_TARGET_PROPERTIES(${ANANAS_RPC} PROPERTIES LINKER_LANGUAGE CXX)
