IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    INCLUDE_DIRECTORIES(/usr/local/Cellar/openssl/1.0.2l/include/)
ENDIF()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(. SSL_SRC)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_LIBRARY(ananas_ssl ${SSL_SRC})
TARGET_LINK_LIBRARIES(ananas_ssl; ssl crypto)
SET_TARGET_PROPERTIES(ananas_ssl PROPERTIES LINKER_LANGUAGE CXX)
