CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE(${PROJECT_SOURCE_DIR}/CMakeCommon)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(. UTIL_SRC)
AUX_SOURCE_DIRECTORY(./log UTIL_SRC)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_LIBRARY(util ${UTIL_SRC})
SET_TARGET_PROPERTIES(util PROPERTIES LINKER_LANGUAGE CXX)
