INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_EXECUTABLE(tryvoid_test TestTryVoid.cc)
ADD_EXECUTABLE(future_test TestFuture.cc)
ADD_EXECUTABLE(future_exception TestFutureException.cc)
ADD_EXECUTABLE(future_whenall_test TestFutureWhenAll.cc)
ADD_EXECUTABLE(future_whenall_iter_test TestFutureWhenAllIter.cc)
ADD_EXECUTABLE(future_whenany_test TestFutureWhenAny.cc)
ADD_EXECUTABLE(future_whenany_if_test TestFutureWhenAnyIf.cc)
ADD_EXECUTABLE(future_whenN_test TestFutureWhenN.cc)
ADD_EXECUTABLE(future_whenN_if_test TestFutureWhenNIf.cc)
ADD_EXECUTABLE(future_timeout TestFutureTimeout.cc)
ADD_EXECUTABLE(future_blocking TestFutureBlocking.cc)

TARGET_LINK_LIBRARIES(future_timeout ananas_net)
TARGET_LINK_LIBRARIES(future_test ananas_net)
TARGET_LINK_LIBRARIES(future_exception ananas_net)
TARGET_LINK_LIBRARIES(future_whenall_test ananas_net)
TARGET_LINK_LIBRARIES(future_whenall_iter_test pthread)
TARGET_LINK_LIBRARIES(future_whenany_test pthread)
TARGET_LINK_LIBRARIES(future_whenany_if_test pthread)
TARGET_LINK_LIBRARIES(future_whenN_test pthread)
TARGET_LINK_LIBRARIES(future_whenN_if_test pthread)
TARGET_LINK_LIBRARIES(future_blocking pthread)
ADD_DEPENDENCIES(future_timeout ananas_net)
ADD_DEPENDENCIES(future_test ananas_net)

SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/bin/future_tests)

